--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: url('/bg.jpg');
+            background: url('bg.jpg');
 
             background-size: cover;
             color: wheat;
